Bug 345896, menus don't find menupopups in XBL, r+sr=roc